--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 
 .four {
     padding: 0 10%;
+    font-weight: 700;
 }
 
 .five {
@@ -34,7 +35,60 @@ body {
     font-weight: bold;
     color: aliceblue;
     padding: 13px 48px;
-    /* border: 2px solid gray; */
     border-radius: 10px;
+}
 
+.six {
+    text-align: center;
+}
+
+.seven {
+    text-align: center;
+    font-size: 96px;
+}
+
+.eight {
+    text-align: center;
+    padding: 0px 350px;
+    font-weight: 700;
+}
+
+.nine {
+    text-align: center;
+    margin: 12px auto;
+}
+
+.ten {
+    text-align: center;
+    display: inline-block;
+
+}
+
+.ten li {
+    text-align: center;
+    font-size: 24px;
+    display: inline-block;
+    padding: 15px 30px;
+    background-color: rgb(48, 44, 44);
+    border-radius: 15px;
+}
+
+.ten li a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+.eleven {
+    text-align: center;
+    text-decoration: underline;
+}
+
+.twilve {
+    text-decoration: none;
+    background-image: linear-gradient(rgb(219, 132, 132), rgba(116, 5, 5, 0.651));
+    font-weight: bold;
+    color: aliceblue;
+    padding: 13px 48px;
+    border-radius: 10px;
+    text-align: center;
 }
