--- a/style.css
+++ b/style.css
@@ -78,9 +78,14 @@ body {
     text-decoration: none;
 }
 
+/* .ten1000 {
+    background-color: rgb(226, 161, 161);
+} */
+
 .eleven {
     text-align: center;
     text-decoration: underline;
+    decoration
 }
 
 .twilve {
