--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 
 .six {
     text-align: center;
+    margin-bottom: 200px;
 }
 
 .seven {
@@ -96,4 +97,19 @@ body {
     padding: 13px 48px;
     border-radius: 10px;
     text-align: center;
+}
+
+.forteen {
+    text-align: center;
+    font-size: 96px;
+}
+
+.fifteen {
+    text-align: center;
+    padding: 0px 300px;
+    font-weight: 700;
+}
+
+.sixteen {
+    margin-bottom: 200px;
 }
